ipc/ipdl/test/ipdl/error/ExtendedAttrInvalidPriorityValue.ipdl
//error: invalid value for attribute `Priority', expected one of: normal, input, vsync, mediumhigh, control

protocol ExtendedAttrInvalidPriorityValue {
child:
  [Priority=invalid] async __delete__();
};
